add check on github

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     <div class="wrapper">
       <h1>Margin auto + flex vertically</h1>
       <p>It works!!!</p>
+      <p>
+        <a
+          href="https://github.com/linkstrifer/flex-vertical-auto-margin/tree/master/"
+          target="_blank"
+          >Check the code on github</a
+        >
+      </p>
       <div class="container">
         <div class="box"></div>
       </div>
